@@ -129,7 +129,7 @@ class IO::Handle {
     return Sys::IO->fcntl($fileno, $command, $command_arg);
   }
   
-  method blocking : void ($blocking : int) {
+  method set_blocking : void ($blocking : int) {
     unless ($blocking >= 0) {
       die "The $blocking must be greater than or equal to 0";
     }
