@@ -70,8 +70,8 @@ class TestCase::IO::Socket {
     my $port = 80;
     my $socket = IO::Socket::INET->new({PeerAddr => $host, PeerPort => $port});
     
-    $socket->blocking(0);
-    $socket->blocking(1);
+    $socket->set_blocking(0);
+    $socket->set_blocking(1);
     
     my $send_buffer = "GET / HTTP/1.0\r\n\r\n";
     $socket->send($send_buffer);
